GNOME Bugzilla – Bug 765376
Fail to build because of missing includes on FreeBSD
Last modified: 2016-07-23 16:15:49 UTC
This error was caused by commit 6a8826f. Error messages: CC libsoup_2_4_la-soup-auth-negotiate.lo In file included from soup-auth-negotiate.c:17: /usr/include/gssapi/gssapi_krb5.h:130:70: error: unknown type name 'time_t' gsskrb5_extract_authtime_from_sec_context(OM_uint32 *, gss_ctx_id_t, time_t *); ^ /usr/include/gssapi/gssapi_krb5.h:221:5: error: unknown type name 'int32_t'; did you mean '__int32_t'? int32_t *enctypes); ^ /usr/include/x86/_types.h:55:15: note: '__int32_t' declared here typedef int __int32_t; ^ 2 errors generated. Makefile:1168: recipe for target 'libsoup_2_4_la-soup-auth-negotiate.lo' failed It seems stdint.h and time.h have to be included first.
> It seems stdint.h and time.h have to be included first. Can you please attach a tested patch? I don't want to commit a fix blind and then find out later that it doesn't work for some reason.
Created attachment 326705 [details] [review] build: Add missing includes for GSSAPI on FreeBSD I didn't attach this patch because I am not sure whether this is the most correct fix. It does fix the build.
Can the patch be reviewed? It has stayed here for almost one month.
I think I have to ping again ... Can anyone help review the patch?
I think I really need to ping again ... This patch has stayed here for almost 3 months without begin reviewed.
it's a trivial patch, but I don't like it... why are those includes needed? I thought freebsd fixed all their transitive #include issues years ago? Does "man gssapi" on freebsd tell you that you need to include those headers? What's missing without them?
Created attachment 331712 [details] [review] build: Remove unused gssapi_krb5.h include This fixes missing includes problem on FreeBSD. On FreeBSD, 'man gssapi' only mentions gssapi/gssapi.h and it does work without including additional headers. It is gssapi/gssapi_krb5.h that causes compilation error here. Fortunately, gssapi/gssapi_krb5.h doesn't seem to be required and we can simply remove the unused gssapi/gssapi_krb5.h include.
committed. thanks Attachment 331712 [details] pushed as 589c276 - build: Remove unused gssapi_krb5.h include