build: Remove unused gssapi_krb5.h include

This fixes missing includes problem on FreeBSD.

https://bugzilla.gnome.org/show_bug.cgi?id=765376